@@ -1,3 +1,8 @@
+May 9, 2010 edgbla <edgbla@yandex.ru>
+
+ * libpcsxcore/psxcounters.c: psxRcntFreeze was fixed.
+ * plugins/dfxvideo/prim.c: Returned some code (iGPUHeight=1024), IMO, it's wrong, can't perform the tests.
+
 May 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/plugins.c: Removed support for ancient GPU/SPU plugin APIs.
